--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,13 +8,7 @@
         <link rel="dns-prefetch" href="//fonts.googleapis.com" />
         <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
         <custom-css />
-        <script>
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js');
-                });
-            }
-        </script>
+
     </head>
     <body class="bg-neutral-50 dark:bg-neutral-900 overflow-x-hidden">
         <div id="app"></div>
@@ -22,6 +16,15 @@
         <script type="text/javascript" src="/beacons.min.js" async></script>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <script>
+            if ('serviceWorker' in navigator) {
+
+                window.addEventListener('load', () => {
+                    console.log('registering service worker');
+                    navigator.serviceWorker.register('/service-worker.js?v=0.0.8');
+                });
+            }
         </script>
 
         <analytics />
